# d7012e

./: README.md
exercises/: Exercises1.hs  Exercises2.hs  Exercises4.hs  Exercises5.hs  Exercises6.hs  Haskell_Exercises1.hs  Haskell_Exercises2.hs  Haskell_Exercises3.hs  Haskell_Exercises4.hs  Haskell_Exercises5.hs  Haskell_Exercises6.hs  Haskell_Exercises7.hs  LICENSE  exercises.cabal  prolog_exercises1.pl
exercises/app/: Exercises1.hs  Exercises2.hs  Exercises3.hs  Exercises4.hs  Exercises5.hs  Exercises6.hs  Exercises7.hs  Main.hs
exercises_1/: CHANGELOG.md  exercises1.cabal
exercises_1/app/: Main.hs
haskell/lab1/: SmallestKSets.hs
haskell/lab2/: expr.hs
haskell/lab3/: CoreParser.hs  Expr.hs  Parser.hs  Program.hs  README.md  Statement.hs  TestExpr.hs  TestParser.hs  TestProgram.hs  TestStatement.hs
lab1/: Lab1.cabal  lab1.cabal
lab1/app/: Main.hs  Test.hs
lab1/app/modules/: SmallestKSets.hs  Test.hs  Test2.hs
lab2/: expr.hs
lab3/: CoreParser.hs  Dictionary.hs  Expr.hs  Parser.hs  Program.hs  Statement.hs  TestProgram.hs
prolog/p1/: package_delivery.pl
prolog/p2/: smallest_k_sets.pl
prolog/p3/: othello.pl  play.pl  rndBoard.pl  stupid.pl  ttt.pl
