cabal-version:      2.4
name:               Lab1
version:            0.1.0.0
author:             shakir-01
maintainer:         shakir@flasheye.se

-- category:
extra-source-files: CHANGELOG.md

-- Define the executable section
executable Lab1
    main-is:          Main.hs
    other-modules:    Test, Test2
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app, app/modules
    default-language: Haskell2010
